chore: update URLs from sxzz.moe to sxzz.dev

--- a/src/content/posts/en/2022.md
+++ b/src/content/posts/en/2022.md
@@ -62,7 +62,7 @@ Back in 2021 I had thought about live-streaming coding on Bilibili, but it was j
 <br/><sup><del>Grinding starts</del></sup>
 </p>
 
-In the second half of the year, I gradually shifted my focus beyond Element Plus. I hacked on some toy projects and kept maintaining my own libraries -- basically fixing things here and there and hopping on PRs 🤪. The personal project I spent the most time on was [Vue Macros](https://vue-macros.sxzz.moe/). Through it, I unlocked some weird ways to use Vue -- an experimental Vue edition ~~(not really)~~. With this project I attended [Nuxt Nation 2022](https://nuxtnation.com/). Invited by [Haoqun Jiang](https://github.com/sodatea), I also joined [Vue Conf China 2022](https://vue.w3ctech.com/), my first time speaking in the Vue community. Unfortunately, due to well-known reasons, I still haven't been able to attend any in-person meetups.
+In the second half of the year, I gradually shifted my focus beyond Element Plus. I hacked on some toy projects and kept maintaining my own libraries -- basically fixing things here and there and hopping on PRs 🤪. The personal project I spent the most time on was [Vue Macros](https://vue-macros.dev/). Through it, I unlocked some weird ways to use Vue -- an experimental Vue edition ~~(not really)~~. With this project I attended [Nuxt Nation 2022](https://nuxtnation.com/). Invited by [Haoqun Jiang](https://github.com/sodatea), I also joined [Vue Conf China 2022](https://vue.w3ctech.com/), my first time speaking in the Vue community. Unfortunately, due to well-known reasons, I still haven't been able to attend any in-person meetups.
 
 <p align="center">
 <img src="https://user-images.githubusercontent.com/6481596/213796512-ef1bce9b-d6b5-4b41-af58-52b1f81e1dc5.png" style="width: 500px" />
