build: setup typescript typecheck, eslint, and prettier
Add @astrojs/check for TypeScript typechecking and @sxzz/eslint-config with
ESLint for code linting. Integrate prettier-plugin-astro for Astro file
formatting. All type errors, lint issues, and formatting problems have been
resolved. Added scripts: pnpm typecheck, pnpm lint, pnpm lint:fix, pnpm format.

--- a/src/content/posts/en/2022.md
+++ b/src/content/posts/en/2022.md
@@ -1,5 +1,5 @@
 ---
-title: "2022: My Open-Source Journey"
+title: '2022: My Open-Source Journey'
 date: 2023-01-21
 description: From my first PR to VueUse to joining the Vue team, a look back at my open-source journey.
 ---
